1st try: Merge with the SampleTool. It has some goodies that we'd like to bring in SR.

--- a/Tools/SolidReflector/trunk/CMakeLists.txt
+++ b/Tools/SolidReflector/trunk/CMakeLists.txt
@@ -11,7 +11,7 @@ project(SolidReflector NONE)
 cmake_minimum_required(VERSION 2.6.2)
 
 # Tell cmake to look for modules in that path first.
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src/vendors/SolidOpt/cmake")
+set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 # Disallow insource build since I never test that
 string(COMPARE EQUAL "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}" INSOURCE)
