Add *very* *very* raw implementation of Gtk-based object inspector. The style will improve quickly. We want to check it in for bookkeeping reasons.

--- a/SolidV/trunk/src/CMakeLists.txt
+++ b/SolidV/trunk/src/CMakeLists.txt
@@ -4,6 +4,7 @@ csharp_add_library(
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
 
   ${CMAKE_CURRENT_SOURCE_DIR}/Cairo/*.cs
+  ${CMAKE_CURRENT_SOURCE_DIR}/Gtk/PropertyGrid/*.cs
   ${CMAKE_CURRENT_SOURCE_DIR}/MVC/Controller/*.cs
   ${CMAKE_CURRENT_SOURCE_DIR}/MVC/Controller/VisualCodeControllers/*.cs
   ${CMAKE_CURRENT_SOURCE_DIR}/MVC/Model/*.cs
@@ -16,7 +17,13 @@ csharp_add_dependencies(
   # External
   Mono.Cairo.dll
   # GAC
+  "gtk-sharp.dll"
   "gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  "atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
   )
 csharp_add_project_meta(
   SolidV.dll
