--- a/Tools/DataMorphose/trunk/plugins/ImportExport/src/CMakeLists.txt
+++ b/Tools/DataMorphose/trunk/plugins/ImportExport/src/CMakeLists.txt
@@ -10,6 +10,7 @@ csharp_add_dependencies(
   ${CMAKE_RUNTIME_OUTPUT_DIR}/DataMorphose.exe
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidV.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/MonoDevelop.Dock.dll
   # GAC
   gtk-sharp.dll
