--- a/SolidV/trunk/src/CMakeLists.txt
+++ b/SolidV/trunk/src/CMakeLists.txt
@@ -16,14 +16,8 @@ csharp_add_dependencies(
   SolidV.dll
   # External
   Mono.Cairo.dll
-  # GAC
-  "gtk-sharp.dll"
-  "gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
-  "gdk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
-  "glib-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
-  "glade-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
-  "pango-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
-  "atk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
+  # Packages
+  "pkg:gtk-sharp-2.0"
   )
 csharp_add_project_meta(
   SolidV.dll
