--- a/Tools/SolidReflector/trunk/plugins/AssemblyBrowser/src/CMakeLists.txt
+++ b/Tools/SolidReflector/trunk/plugins/AssemblyBrowser/src/CMakeLists.txt
@@ -16,7 +16,6 @@ csharp_add_dependencies(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/MonoDevelop.Dock.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
-  # GAC
-  gtk-sharp.dll
-  gdk-sharp.dll
+  # Packages
+  "pkg:gtk-sharp-2.0"
   )
