--- a/Tools/SolidReflector/trunk/plugins/CFGVisualizer/src/CMakeLists.txt
+++ b/Tools/SolidReflector/trunk/plugins/CFGVisualizer/src/CMakeLists.txt
@@ -15,6 +15,7 @@ csharp_add_dependencies(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/AssemblyBrowser.dll
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.ILtoCFG.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.CFGtoIL.dll
@@ -23,6 +24,6 @@ csharp_add_dependencies(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidV.dll
   # GAC
   Mono.Cairo.dll
-  gtk-sharp.dll
-  gdk-sharp.dll
+  # Packages
+  "pkg:gtk-sharp-2.0"
   )
