--- a/Tools/SolidReflector/trunk/plugins/TACVisualizer/src/CMakeLists.txt
+++ b/Tools/SolidReflector/trunk/plugins/TACVisualizer/src/CMakeLists.txt
@@ -24,6 +24,6 @@ csharp_add_dependencies(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidV.dll
   # GAC
   Mono.Cairo.dll
-  gtk-sharp.dll
-  gdk-sharp.dll
+  # Packages
+  "pkg:gtk-sharp-2.0"
   )
