--- a/Tools/DataMorphose/trunk/CMakeLists.txt
+++ b/Tools/DataMorphose/trunk/CMakeLists.txt
@@ -77,6 +77,31 @@ else()
   list(APPEND MSBUILDFLAGS "/p:Configuration=Release")
 endif()
 
+# Define whether to use assembly deleyed signing or not
+set(DELAY_SIGN OFF CACHE BOOL "Enable delayed assembly signing.")
+if(DELAY_SIGN)
+  # The if-stmt converts On Y, YES to bool and from here on we want only a real
+  # true or false.
+  set(DELAY_SIGN "True") 
+  list(APPEND CSBUILDFLAGS "/delaysign+" "/keyfile:${CMAKE_SOURCE_DIR}/public.snk")
+else()
+  set(DELAY_SIGN "False")
+endif(DELAY_SIGN)
+
+# Suppress the warnings coming from the /doc switch. There is no point warning 
+# about missing documentation for certain methods. We all know about it :)
+list(APPEND CSBUILDFLAGS "/nowarn:1591")
+
+# Define whether to use assembly deleyed signing or not
+set(DELAY_SIGN OFF CACHE BOOL "Enable delayed assembly signing.")
+if(DELAY_SIGN)
+  # The if-stmt converts On Y, YES to bool and from here on we want only a real
+  # true or false.
+  set(DELAY_SIGN "True") 
+  list(APPEND CSBUILDFLAGS "/delaysign+" "/keyfile:${CMAKE_SOURCE_DIR}/public.snk")
+else()
+  set(DELAY_SIGN "False")
+endif(DELAY_SIGN)
 
 #-----------------------------------------------------------------------------
 # Configure Dart testing support.  This should be done before any
