--- a/Tools/SolidReflector/trunk/CMakeLists.txt
+++ b/Tools/SolidReflector/trunk/CMakeLists.txt
@@ -101,6 +101,15 @@ IF(BUILD_TESTING)
 ENDIF(BUILD_TESTING)
 
 # ...
+
+# The lock is used to avoid regeneration of the sln-s and csproj-s if the
+# build system is steered by another one. For example if SolidOpt is embedded
+# as a vendor to say SolidReflector. 
+get_property(SLN_GEN_LOCK GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY)
+if(NOT SLN_GEN_LOCK)
+  set_property(GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY "SolidReflector")
+endif()
+
 add_subdirectory(src)
 add_subdirectory(plugins)
 # FIXME:
@@ -112,8 +121,20 @@ add_subdirectory(doc)
 # Resolve all target dependencies
 csharp_resolve_dependencies()
 
-# Save solution
-csharp_save_vs_solution(SolidReflector)
+# The lock is used to avoid regeneration of the sln-s and csproj-s if the
+# build system is steered by another one. For example if SolidV is embedded
+# as a vendor to say SolidReflector. 
+get_property(SLN_GEN_LOCK GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY)
+if(NOT SLN_GEN_LOCK)
+  set_property(GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY "SolidReflector")
+endif()
+get_property(SLN_GEN_LOCK GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY)
+
+get_property(SLN_GEN_LOCK GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY)
+if (SLN_GEN_LOCK STREQUAL "SolidReflector")
+  # Save solution
+  csharp_save_vs_solution(SolidReflector)
+endif()
 
 #Configure the setenv script.
 configure_file(
