--- a/SolidOpt/trunk/CMakeLists.txt
+++ b/SolidOpt/trunk/CMakeLists.txt
@@ -97,6 +97,15 @@ IF(BUILD_TESTING)
 ENDIF(BUILD_TESTING)
 
 # ...
+
+# The lock is used to avoid regeneration of the sln-s and csproj-s if the
+# build system is steered by another one. For example if SolidOpt is embedded
+# as a vendor to say SolidReflector. 
+get_property(SLN_GEN_LOCK GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY)
+if(NOT SLN_GEN_LOCK)
+  set_property(GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY "SolidOpt")
+endif()
+
 add_subdirectory(src)
 add_subdirectory(cmake/BuildInformation)
 # FIXME:
@@ -108,8 +117,11 @@ add_subdirectory(doc)
 # Resolve all target dependencies
 csharp_resolve_dependencies()
 
-# Save solution
-csharp_save_vs_solution(SolidOpt)
+get_property(SLN_GEN_LOCK GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY)
+if (SLN_GEN_LOCK STREQUAL "SolidOpt")
+  # Save solution
+  csharp_save_vs_solution(SolidOpt)
+endif()
 
 # Display the welcome msg.
 file (READ "${CMAKE_MODULE_PATH}/Welcome.txt" WELCOME)
