--- a/Tools/DataMorphose/trunk/CMakeLists.txt
+++ b/Tools/DataMorphose/trunk/CMakeLists.txt
@@ -113,6 +113,14 @@ IF(BUILD_TESTING)
   MARK_AS_ADVANCED(BUILDNAME)
 ENDIF(BUILD_TESTING)
 
+# The lock is used to avoid regeneration of the sln-s and csproj-s if the
+# build system is steered by another one. For example if SolidOpt is embedded
+# as a vendor to say SolidReflector. 
+get_property(SLN_GEN_LOCK GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY)
+if(NOT SLN_GEN_LOCK)
+  set_property(GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY "DataMorphose")
+endif()
+
 # ...
 add_subdirectory(cmake/BuildInformation)
 add_subdirectory(src)
@@ -126,8 +134,11 @@ add_subdirectory(doc)
 # Resolve all target dependencies
 csharp_resolve_dependencies()
 
-# Save solution
-csharp_save_vs_solution(DataMorphose)
+get_property(SLN_GEN_LOCK GLOBAL PROPERTY SLN_GEN_LOCK_PROPERTY)
+if (SLN_GEN_LOCK STREQUAL "DataMorphose")
+  # Save solution
+  csharp_save_vs_solution(DataMorphose)
+endif()
 
 #Configure the setenv script.
 configure_file(
