We should not build our three address code from a control flow graph. The code models are very different from the control flow graphs.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/CMakeLists.txt
@@ -22,7 +22,7 @@ csharp_add_dependencies(
 
 add_subdirectory(ASTtoIL)
 add_subdirectory(CFGtoIL)
-add_subdirectory(CFGtoTAC)
+add_subdirectory(ILtoTAC)
 add_subdirectory(ILtoAST)
 add_subdirectory(ILtoCFG)
 add_subdirectory(ILtoCG)
