--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoTAC/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoTAC/src/CMakeLists.txt
@@ -5,15 +5,14 @@
 ##
 
 csharp_add_library(
-  SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.dll
+  SolidOpt.Services.Transformations.MultiModel.ILtoTAC.dll
   ${CMAKE_CURRENT_SOURCE_DIR}/*.cs
   ${CMAKE_CURRENT_BINARY_DIR}/AssemblyInfo.cs
   )
 csharp_add_dependencies(
-  SolidOpt.Services.Transformations.MultiModel.CFGtoTAC.dll
+  SolidOpt.Services.Transformations.MultiModel.ILtoTAC.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ThreeAddressCode.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
   # External
