Add forgotten dependency.

--- a/SolidOpt/trunk/src/Services/Transformations/CodeModel/ThreeAddressCode/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/CodeModel/ThreeAddressCode/src/CMakeLists.txt
@@ -13,4 +13,5 @@ csharp_add_dependencies(
   SolidOpt.Services.Transformations.CodeModel.ThreeAddressCode.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
   )
