Make the compiler happy by adding a 'missing' reference.
Review needed:

We define Triplet, which implements ILinearInstruction. We reference the library
that defined Triplet and we don't reference the one defining ILinearInstruction,
which makes the compiler issue error message.

Note we have to figure out whether we can fix/workaround the issue.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoTAC/src/CMakeLists.txt
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoTAC/src/CMakeLists.txt
@@ -14,6 +14,8 @@ csharp_add_dependencies(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ThreeAddressCode.dll
+  # FIXME: This is necessary for the ILinearInstruction interface. I don't understand quite why do we need it.
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.CodeModel.ControlFlowGraph.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.Transformations.MultiModel.dll
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
