Fix the broken by construction SEH tests. Now some of them pass and this is 'semantically' the correct behavior. Some of them fail because the SEH information is passed to the CFG builder is not sufficient. However the test expected outputs 'should be' semantically correct.
Review from somebody else still necessary!

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryCatchFinallyException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryCatchFinallyException.il.cfg
@@ -1,7 +1,12 @@
 block 0:
   kind: structure
   body:
-    IL_0028: ret
+    IL_0000: ldc.i4.4
+    IL_0001: stloc.0
+    IL_0002: ldc.i4.0
+    IL_0003: stloc.1
+  successors:
+    block 1
 block 1:
   kind: seh
   body:
@@ -11,7 +16,10 @@ block 1:
     IL_0007: stloc.0
     IL_0008: leave IL_0028
   successors:
+    block 4
     block 2
+  predecessors:
+    block 0
 block 2:
   kind: seh
   body:
@@ -19,6 +27,9 @@ block 2:
     IL_000e: ldstr "Division by zero detected."
     IL_0013: call System.Void System.Console::WriteLine(System.String)
     IL_0018: leave IL_0028
+  successors:
+    block 4
+    block 3
   predecessors:
     block 1
 block 3:
@@ -27,5 +38,14 @@ block 3:
     IL_001d: ldstr "finally keyword reached"
     IL_0022: call System.Void System.Console::WriteLine(System.String)
     IL_0027: endfinally
+  successors:
+    block 4
   predecessors:
-    block 3
+    block 2
+block 4:
+  kind: structure
+  body:
+    IL_0028: ret
+  predecessors:
+    block 1
+    block 2
