--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionWithNops.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionWithNops.il.cfg
@@ -1,7 +1,12 @@
 block 0:
   kind: structure
   body:
-    IL_001a: ret
+    IL_0000: ldc.i4.4
+    IL_0001: stloc.0
+    IL_0002: ldc.i4.0
+    IL_0003: stloc.1
+  successors:
+    block 1
 block 1:
   kind: seh
   body:
@@ -11,12 +16,31 @@ block 1:
     IL_0007: stloc.0
     IL_0008: leave IL_001a
   successors:
-    block 2
+    block 3
+    block 4
+  predecessors:
+    block 0
 block 2:
+  kind: structure
+  body:
+    IL_000d: nop
+    IL_000e: nop
+  successors:
+    block 3
+block 3:
   kind: seh
   body:
     IL_000f: ldstr "Finally..."
     IL_0014: call System.Void System.Console::WriteLine(System.String)
     IL_0019: endfinally
+  successors:
+    block 4
+  predecessors:
+    block 2
+block 4:
+  kind: structure
+  body:
+    IL_001a: ret
   predecessors:
     block 1
+    block 2
