--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryMultipleCatchException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryMultipleCatchException.il.cfg
@@ -1,9 +1,12 @@
 block 0:
   kind: structure
   body:
-    IL_003e: ldstr "I am a WriteLine method"
-    IL_0043: call System.Void System.Console::WriteLine(System.String)
-    IL_0048: ret
+    IL_0000: ldc.i4.4
+    IL_0001: stloc.0
+    IL_0002: ldc.i4.0
+    IL_0003: stloc.1
+  successors:
+    block 1
 block 1:
   kind: seh
   body:
@@ -13,7 +16,10 @@ block 1:
     IL_0007: stloc.0
     IL_0008: leave IL_003e
   successors:
+    block 5
     block 2
+  predecessors:
+    block 0
 block 2:
   kind: seh
   body:
@@ -21,6 +27,9 @@ block 2:
     IL_000e: ldstr "Division by zero detected."
     IL_0013: call System.Void System.Console::WriteLine(System.String)
     IL_0018: leave IL_003e
+  successors:
+    block 5
+    block 3
   predecessors:
     block 1
 block 3:
@@ -30,8 +39,11 @@ block 3:
     IL_001e: ldstr "Arg out of range detected."
     IL_0023: call System.Void System.Console::WriteLine(System.String)
     IL_0028: leave IL_003e
+  successors:
+    block 5
+    block 4
   predecessors:
-    block 3
+    block 2
 block 4:
   kind: seh
   body:
@@ -39,5 +51,19 @@ block 4:
     IL_002f: ldstr "Overflow detected."
     IL_0034: call System.Void System.Console::WriteLine(System.String)
     IL_0039: leave IL_003e
+  successors:
+    block 5
   predecessors:
+    block 3
+block 5:
+  kind: structure
+  body:
+    IL_003e: ldstr "I am a WriteLine method"
+    IL_0043: call System.Void System.Console::WriteLine(System.String)
+    IL_0048: ret
+  predecessors:
+    block 1
+    block 2
+    block 3
     block 4
+
