--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchTwoFiltersException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchTwoFiltersException.il.cfg
@@ -1,5 +1,5 @@
 block 0:
-  kind: structure
+  kind: seh
   body:
     IL_0000: ldc.i4.0
     IL_0001: ldc.i4.0
@@ -7,47 +7,83 @@ block 0:
     IL_0003: ldc.i4.1
     IL_0004: stsfld System.Int32 TestCase::exc_not_thrown
     IL_0009: leave IL_002c
+  successors:
+    block 5
+    block 1
+block 1:
+  kind: seh
+  body:
     IL_000e: pop
     IL_000f: ldc.i4.0
     IL_0010: endfilter
-block 1:
-  kind: structure
+  successors:
+    block 2
+    block 3
+  predecessors:
+    block 0
+block 2:
+  kind: seh
   body:
     IL_0012: ldc.i4.1
     IL_0013: stsfld System.Int32 TestCase::flt_1_caught
     IL_0018: leave IL_002c
+  successors:
+    block 5
+  predecessors:
+    block 1
+block 3:
+  kind: seh
+  body:
     IL_001d: pop
     IL_001e: ldc.i4.1
     IL_001f: endfilter
-block 2:
+  successors:
+    block 4
+  predecessors:
+    block 1
+block 4:
+  kind: seh
+  body:
+    IL_0021: ldc.i4.1
+    IL_0022: stsfld System.Int32 TestCase::flt_2_caught
+    IL_0027: leave IL_002c
+  successors:
+    block
+  predecessors:
+    block 3
+block 5:
   kind: structure
   body:
     IL_002c: ldsfld System.Int32 TestCase::exc_not_thrown
     IL_0031: brtrue IL_0056
   successors:
+    block 9
     block 6
-    block 3
-block 3:
+  predecessors:
+    block 0
+    block 2
+    block 4
+block 6:
   kind: structure
   body:
     IL_0036: ldsfld System.Int32 TestCase::flt_1_caught
     IL_003b: brtrue IL_0056
   successors:
-    block 6
-    block 4
+    block 9
+    block 7
   predecessors:
-    block 2
-block 4:
+    block 5
+block 7:
   kind: structure
   body:
     IL_0040: ldsfld System.Int32 TestCase::flt_2_caught
     IL_0045: brfalse IL_0056
   successors:
-    block 6
-    block 5
+    block 9
+    block 8
   predecessors:
-    block 3
-block 5:
+    block 6
+block 8:
   kind: structure
   body:
     IL_004a: ldstr "PASS"
@@ -55,8 +91,8 @@ block 5:
     IL_0054: ldc.i4.0
     IL_0055: ret
   predecessors:
-    block 4
-block 6:
+    block 7
+block 9:
   kind: structure
   body:
     IL_0056: ldstr "FAIL"
@@ -64,48 +100,6 @@ block 6:
     IL_0060: ldc.i4.1
     IL_0061: ret
   predecessors:
-    block 2
-    block 3
-    block 4
-block 7:
-  kind: seh
-  body:
-    IL_0000: ldc.i4.0
-    IL_0001: ldc.i4.0
-    IL_0002: div
-    IL_0003: ldc.i4.1
-    IL_0004: stsfld System.Int32 TestCase::exc_not_thrown
-    IL_0009: leave IL_002c
-  successors:
-    block 8
-    block 9
-block 8:
-  kind: seh
-  body:
-    IL_0012: ldc.i4.1
-    IL_0013: stsfld System.Int32 TestCase::flt_1_caught
-    IL_0018: leave IL_002c
-  predecessors:
+    block 5
+    block 6
     block 7
-block 9:
-  kind: seh
-  body:
-    IL_000e: pop
-    IL_000f: ldc.i4.0
-  predecessors:
-    block 7
-block 10:
-  kind: seh
-  body:
-    IL_0021: ldc.i4.1
-    IL_0022: stsfld System.Int32 TestCase::flt_2_caught
-    IL_0027: leave IL_002c
-  predecessors:
-    block 10
-block 11:
-  kind: seh
-  body:
-    IL_001d: pop
-    IL_001e: ldc.i4.1
-  predecessors:
-    block 10
