--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NestedTryCatchFinallyException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NestedTryCatchFinallyException.il.cfg
@@ -1,26 +1,36 @@
 block 0:
   kind: structure
   body:
-    IL_0058: ldstr "I am a WriteLine method"
-    IL_005d: call System.Void System.Console::WriteLine(System.String)
-    IL_0062: ret
+    IL_0000: ldc.i4.4
+    IL_0001: stloc.0
+    IL_0002: ldc.i4.0
+    IL_0003: stloc.1
+    IL_0004: ldc.i4.2
+    IL_0005: newarr System.Int32
+    IL_000a: stloc.2
+  successors:
+    block 1
 block 1:
   kind: seh
   body:
-    IL_001f: ldloc.2
-    IL_0020: ldc.i4.4
-    IL_0021: ldelem.i4
-    IL_0022: call System.Void System.Console::WriteLine(System.Int32)
-    IL_0027: leave IL_0048
+    IL_000b: ldloc.0
+    IL_000c: ldloc.1
+    IL_000d: div
+    IL_000e: stloc.0
+    IL_000f: leave IL_0058
   successors:
+    block 8
     block 2
+  predecessors:
+    block 0
 block 2:
   kind: seh
   body:
-    IL_002c: stloc.s V_4
-    IL_002e: ldstr "IndexOutOfRangeException detected"
-    IL_0033: call System.Void System.Console::WriteLine(System.String)
-    IL_0038: leave IL_0048
+    IL_0014: stloc.3
+    IL_0015: ldstr "DivideByZeroException detected."
+    IL_001a: call System.Void System.Console::WriteLine(System.String)
+  successors:
+    block 3
   predecessors:
     block 1
 block 3:
@@ -31,82 +41,58 @@ block 3:
     IL_0021: ldelem.i4
     IL_0022: call System.Void System.Console::WriteLine(System.Int32)
     IL_0027: leave IL_0048
+  successors:
+    block 6
+    block 4
+  predecessors:
+    block 2
+block 4:
+  kind: seh
+  body:
     IL_002c: stloc.s V_4
     IL_002e: ldstr "IndexOutOfRangeException detected"
     IL_0033: call System.Void System.Console::WriteLine(System.String)
     IL_0038: leave IL_0048
   successors:
-    block 4
-block 4:
-  kind: seh
-  body:
-    IL_003d: ldstr "Nested finally reached"
-    IL_0042: call System.Void System.Console::WriteLine(System.String)
-    IL_0047: endfinally
+    block 6
+    block 5
   predecessors:
     block 3
 block 5:
   kind: seh
   body:
-    IL_000b: ldloc.0
-    IL_000c: ldloc.1
-    IL_000d: div
-    IL_000e: stloc.0
-    IL_000f: leave IL_0058
+    IL_003d: ldstr "Nested finally reached"
+    IL_0042: call System.Void System.Console::WriteLine(System.String)
+    IL_0047: endfinally
   successors:
     block 6
+  predecessors:
+    block 4
 block 6:
   kind: seh
   body:
-    IL_0014: stloc.3
-    IL_0015: ldstr "DivideByZeroException detected."
-    IL_001a: call System.Void System.Console::WriteLine(System.String)
-    IL_001f: ldloc.2
-    IL_0020: ldc.i4.4
-    IL_0021: ldelem.i4
-    IL_0022: call System.Void System.Console::WriteLine(System.Int32)
-    IL_0027: leave IL_0048
-    IL_002c: stloc.s V_4
-    IL_002e: ldstr "IndexOutOfRangeException detected"
-    IL_0033: call System.Void System.Console::WriteLine(System.String)
-    IL_0038: leave IL_0048
-    IL_003d: ldstr "Nested finally reached"
-    IL_0042: call System.Void System.Console::WriteLine(System.String)
-    IL_0047: endfinally
-    IL_0048: leave IL_0058
-  predecessors:
-    block 5
-block 7:
-  kind: seh
-  body:
-    IL_000b: ldloc.0
-    IL_000c: ldloc.1
-    IL_000d: div
-    IL_000e: stloc.0
-    IL_000f: leave IL_0058
-    IL_0014: stloc.3
-    IL_0015: ldstr "DivideByZeroException detected."
-    IL_001a: call System.Void System.Console::WriteLine(System.String)
-    IL_001f: ldloc.2
-    IL_0020: ldc.i4.4
-    IL_0021: ldelem.i4
-    IL_0022: call System.Void System.Console::WriteLine(System.Int32)
-    IL_0027: leave IL_0048
-    IL_002c: stloc.s V_4
-    IL_002e: ldstr "IndexOutOfRangeException detected"
-    IL_0033: call System.Void System.Console::WriteLine(System.String)
-    IL_0038: leave IL_0048
-    IL_003d: ldstr "Nested finally reached"
-    IL_0042: call System.Void System.Console::WriteLine(System.String)
-    IL_0047: endfinally
     IL_0048: leave IL_0058
   successors:
     block 8
-block 8:
+    block 7
+  predecessors:
+    block 3
+    block 4
+    block 5
+block 7:
   kind: seh
   body:
     IL_004d: ldstr "Outer finally reached"
     IL_0052: call System.Void System.Console::WriteLine(System.String)
     IL_0057: endfinally
+  successors:
+    block 8
+block 8:
+  kind: structure
+  body:
+    IL_0058: ldstr "I am a WriteLine method"
+    IL_005d: call System.Void System.Console::WriteLine(System.String)
+    IL_0062: ret
   predecessors:
-    block 7
+    block 1
+    block 6
