--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionFinallyAtEnd.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionFinallyAtEnd.il.cfg
@@ -1,7 +1,12 @@
 block 0:
   kind: structure
   body:
-    IL_000d: ret
+    IL_0000: ldc.i4.4
+    IL_0001: stloc.0
+    IL_0002: ldc.i4.0
+    IL_0003: stloc.1
+  successors:
+    block 1
 block 1:
   kind: seh
   body:
@@ -10,3 +15,23 @@ block 1:
     IL_0006: div
     IL_0007: stloc.0
     IL_0008: leave IL_000d
+  successors:
+    block 2
+    block 3
+  predecessors:
+    block 0
+block 2:
+  kind: structure
+  body:
+    IL_000d: ret
+  predecessors:
+    block 1
+block 3:
+  kind: seh
+  body:
+    IL_000e: ldstr "Finally..."
+    IL_0013: call System.Void System.Console::WriteLine(System.String)
+    IL_0018: endfinally
+  predecessors:
+    block 1
+    block 2
