Add missing predecessors.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFaultException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFaultException.il.cfg
@@ -24,6 +24,8 @@ block 2:
     IL_001a: ldc.i4.1
     IL_001b: stsfld System.Int32 TestCase::flt_caught
     IL_0020: endfinally
+  successors:
+    block 3
   predecessors:
     block 1
 block 3:
@@ -37,6 +39,7 @@ block 3:
   predecessors:
     block 0
     block 1
+    block 2
 block 4:
   kind: structure
   body:
