--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NestedTryCatchFinallyException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NestedTryCatchFinallyException.il.cfg
@@ -87,6 +87,8 @@ block 7:
     IL_0057: endfinally
   successors:
     block 8
+  predecessors:
+    block 6
 block 8:
   kind: structure
   body:
@@ -96,3 +98,5 @@ block 8:
   predecessors:
     block 1
     block 6
+    block 7
+
