--- a/SolidV/trunk/src/CMakeLists.txt
+++ b/SolidV/trunk/src/CMakeLists.txt
@@ -5,6 +5,8 @@ csharp_add_library(
 
   ${CMAKE_CURRENT_SOURCE_DIR}/Cairo/*.cs
   ${CMAKE_CURRENT_SOURCE_DIR}/Gtk/ObjectInspector/*.cs
+  ${CMAKE_CURRENT_SOURCE_DIR}/Gdk/*.cs
+  ${CMAKE_CURRENT_SOURCE_DIR}/Ide/DockLibrary/*.cs
   ${CMAKE_CURRENT_SOURCE_DIR}/MVC/Controller/*.cs
   ${CMAKE_CURRENT_SOURCE_DIR}/MVC/Controller/VisualCodeControllers/*.cs
   ${CMAKE_CURRENT_SOURCE_DIR}/MVC/Model/*.cs
@@ -16,6 +18,8 @@ csharp_add_dependencies(
   SolidV.dll
   # External
   Mono.Cairo.dll
+  Mono.Posix.dll
+  System.Xml.dll
   # Packages
   "pkg:gtk-sharp-2.0"
   )
