Use the embeded in SolidV docking functionality

--- a/Tools/SolidReflector/trunk/plugins/AssemblyBrowser/src/CMakeLists.txt
+++ b/Tools/SolidReflector/trunk/plugins/AssemblyBrowser/src/CMakeLists.txt
@@ -14,7 +14,7 @@ csharp_add_dependencies(
   ${CMAKE_RUNTIME_OUTPUT_DIR}/SolidReflector.exe
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/MonoDevelop.Dock.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidV.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/Mono.Cecil.dll
   # Packages
   "pkg:gtk-sharp-2.0"
