--- a/Tools/SampleTool/trunk/src/CMakeLists.txt
+++ b/Tools/SampleTool/trunk/src/CMakeLists.txt
@@ -17,7 +17,7 @@ csharp_add_dependencies(
   SampleTool.exe
   # External
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
-  ${CMAKE_LIBRARY_OUTPUT_DIR}/MonoDevelop.Dock.dll
+  ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidV.dll
   Mono.Posix.dll
   # GAC
   "gtk-sharp, Version=2.12.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f"
