We will use the TreeViewPad as text editor as well so we don't need another plugin for it. Reverting.

--- a/Tools/SampleTool/trunk/plugins/CMakeLists.txt
+++ b/Tools/SampleTool/trunk/plugins/CMakeLists.txt
@@ -4,5 +4,5 @@
 ## For further details see the nearest License.txt
 ##
 
-add_subdirectory(TextEditor)
+add_subdirectory(TestPlugin)
 add_subdirectory(TreeViewPad)
