--- a/Tools/SampleTool/trunk/plugins/TreeViewPad/CMakeLists.txt
+++ b/Tools/SampleTool/trunk/plugins/TreeViewPad/CMakeLists.txt
@@ -10,6 +10,5 @@ csharp_add_dependencies(
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidOpt.Services.dll
   ${CMAKE_LIBRARY_OUTPUT_DIR}/SolidV.dll
   # GAC
-  gtk-sharp.dll
-  gdk-sharp.dll
+  pkg:gtk-sharp-2.0
   )
