--- a/Tools/DataMorphose/trunk/CMakeLists.txt
+++ b/Tools/DataMorphose/trunk/CMakeLists.txt
@@ -14,6 +14,11 @@ set(PUBLIC_KEY "${CMAKE_SOURCE_DIR}/public.snk")
 
 # Tell cmake to look for modules in that path first.
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+if(NOT EXISTS CMAKE_MODULE_PATH)
+  ### TODO: Remove hard dependency to SolidOpt
+  set(CMAKE_MODULE_PATH "../../../SolidOpt/trunk/cmake")
+endif()
+get_filename_component(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" ABSOLUTE)
 
 # Disallow insource build since I never test that
 string(COMPARE EQUAL "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_BINARY_DIR}" INSOURCE)
@@ -58,6 +63,7 @@ file(MAKE_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIR})
 file(MAKE_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIR})
 
 include(${CMAKE_MODULE_PATH}/Version.cmake)
+include(${CMAKE_MODULE_PATH}/Vendors.cmake)
 
 # If no build type is set it should defaults to debug
 if( NOT CMAKE_BUILD_TYPE )
@@ -122,7 +128,7 @@ if(NOT SLN_GEN_LOCK)
 endif()
 
 # ...
-add_subdirectory(cmake/BuildInformation)
+add_subdirectory(${CMAKE_MODULE_PATH}/BuildInformation cmake/BuildInformation)
 add_subdirectory(src)
 add_subdirectory(plugins)
 # FIXME:
