Fix build due to new optional parameter bug in SHARP_ADD_MSBUILD_PROJECT. Remove one level from some relative paths due to remove trunk form directory structure.

--- a/SolidV/CMakeLists.txt
+++ b/SolidV/CMakeLists.txt
@@ -8,7 +8,7 @@ cmake_minimum_required(VERSION 2.6.2)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 if(NOT EXISTS CMAKE_MODULE_PATH)
   ### TODO: Remove hard dependency to SolidOpt
-  set(CMAKE_MODULE_PATH "../../SolidOpt/cmake")
+  set(CMAKE_MODULE_PATH "../SolidOpt/cmake")
 endif()
 get_filename_component(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" ABSOLUTE)
 
